--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,6 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, button, input, option {
+h1, h2, h3, h4, h5, h6, button, input, option, select {
   font-family: 'Poppins', sans-serif;
 }
