--- a/src/pages/Booking/Booking.css
+++ b/src/pages/Booking/Booking.css
@@ -38,6 +38,11 @@
   font-size: 1rem;
 }
 
+select option {
+  background-color: rgb(108,84,147);
+  color: #f5f5f5;
+}
+
 .booking-page input[type="date"]:focus,
 .booking-page select:focus {
   outline: none;
@@ -93,6 +98,7 @@
   border-radius: 8px;
   cursor: pointer;
   font-weight: 600;
+  font-size: 1rem;
   transition: all 0.3s ease;
 }
 
@@ -101,19 +107,42 @@
   transform: translateY(-2px);
 }
 
-@media (max-width: 767px) {
-  .booking-page {
-    padding: 1rem;
-    margin: 1rem;
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .booking-page h2 {
+    font-size: 1.5rem;
   }
 
   .seat {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+  }
+
+  .confirm-btn {
+    font-size: 0.9rem;
+    padding: 0.8rem;
   }
 }
 
+
 @media (min-width: 425px) and (max-width: 767px) {
   .booking-page {
-    margin: 1.5rem;
+    margin: 2.5rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .booking-page {
+    max-width: 90%;
+    padding: 2rem;
+  }
+
+  .seat {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .booking-page {
+    max-width: 1000px;
   }
 }
