--- a/src/pages/Booking/Booking.css
+++ b/src/pages/Booking/Booking.css
@@ -109,6 +109,10 @@ select option {
 
 
 @media (min-width: 320px) and (max-width: 424px) {
+  .booking-page {
+    margin: 1.5rem;
+  }
+
   .booking-page h2 {
     font-size: 1.5rem;
   }
